similar/tests/snapshots/similar__algorithms__lcs__pat.snap
---
source: similar/src/algorithms/lcs.rs
expression: d.ops()
---
[
    Equal {
        old_index: 0,
        new_index: 0,
        len: 2,
    },
    Delete {
        old_index: 2,
        old_len: 1,
        new_index: 2,
    },
    Equal {
        old_index: 3,
        new_index: 2,
        len: 1,
    },
    Equal {
        old_index: 4,
        new_index: 3,
        len: 1,
    },
    Insert {
        old_index: 5,
        new_index: 4,
        new_len: 2,
    },
]
