similar/tests/snapshots/similar__algorithms__lcs__same.snap
---
source: similar/src/algorithms/lcs.rs
expression: d.ops()
---
[
    Equal {
        old_index: 0,
        new_index: 0,
        len: 8,
    },
]
